tests/cases/compiler/nestedUnaryExpressionHang/index.ts
3333%!!!!!!!!!!!!!!!!!!!!!!!!!!!! //~ ERROR: Expression expected.